Fix the photo resolution to work on firefox

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -3,6 +3,7 @@
 .preview-container {
 	max-width: 600px;
 	width: 100%;
+	height: auto;
 	margin: auto;
 	position: relative;
 }
@@ -32,9 +33,9 @@
 	display: none;
 }
 
-#canvas {
+#img-container {
 	width: 600px;
-	height: 400px;
+	height: 450px;
 	display: none;
 }
 
@@ -42,7 +43,7 @@
 	background: lightgrey;
 	max-width: 600px;
 	width: auto;
-	height: 110px;
+	height: 120px;
 	margin: auto;
 	overflow-x: auto;
 	overflow-y: hidden;
@@ -58,8 +59,8 @@
 }
 
 label img {
-	height: 90px;
-	width: 135px;
+	height: 105px;
+	width: 140px;
 	background: white;
 }
 
